    * Added statement to camconfig and documentation website regarding minimum
      recommended resolution
    * Contribution statement added to README
    * Included improved statement of need in JOSS paper and documentation
    * Integrated ability to store ROI directly when running stream from the
      command line
    * Fixed autoconfig camera closure

2020-07-07 version 3.1.0
    * Added accompanying academic paper for pirecorder, submitted to The
      Journal of Open Source Software

2020-06-29 version 3.0.2
    * Updated recording mode to be able to record at higher framerates and
    * updated documentation with a note about high framerates.
    * Fixed resolution for images not needing to be divisible by multiples of 16

2020-06-28 version 3.0.1
    * Added steps to documentation to get the latest firmware
    * Updated recording mode to be able to record at higher framerates
    * Small fix to schedule function logfile filenaming
    * Small updates to documentation and website

2020-06-27 version 3.0.0
    Major update with a large number of additions, improvements, and fixes.

    Large additions:
    - Created an in-depth documentation website hosted with GitHub
      pages that provides tutorials for all the different functionalities of
      pirecorder with a nice and clear webdesign, from setting up the raspberry
      pi, and installing pirecorder, to configation, scheduling recordings, and
      converting media. See https://jollejolles.github.io/pirecorder/
    - Added new camconfig module to interactively set all the recording
      parameters, including rotation, shutterspeed, whitebalance, iso, contrast,
      saturation, and sharpness via a dynamically updated video stream. Changes
      can be automatically linked to a PiRecorder configuration file.
    - Integrated automatic exposure and white balance modes both for each new
      recording and within each (video) recording as well as a function to get