@@ -227,7 +227,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If using the `stream` module to store the region of interest it needs to be run as part of a `PiRecorder` instance."
+    "If using the `stream` module to store the region of interest, the configfile needs to be added as a parameter, e.g. `stream --configfile pirecorder.conf`"
    ]
   },
   {
@@ -505,21 +505,21 @@
    "name": "python2"
   },
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "main",
    "language": "python",
-   "name": "python2"
+   "name": "main"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.16"
   },
   "nteract": {
    "version": "0.12.3"
